# embci-example-repo

./: .embed.toml  .woodpecker.yml  Cargo.toml  README.md  memory.x  pyproject.toml  saleae_example.py
.cargo/: config.toml
gpio_toggle_unsafe/: Cargo.toml
gpio_toggle_unsafe/src/: main.rs
gpio_toggle_with_hal/: Cargo.toml
gpio_toggle_with_hal/src/: main.rs
gpio_toggle_with_pac/: Cargo.toml
gpio_toggle_with_pac/src/: main.rs
i2c_with_hal/: Cargo.toml
i2c_with_hal/src/: main.rs
pwm_with_hal/: Cargo.toml
pwm_with_hal/src/: main.rs
spi_with_hal/: Cargo.toml
spi_with_hal/src/: main.rs  sub.rs
src/: main.rs
tests/: conftest.py  control_power_supply.py  test_gpio_toggle.py  test_i2c.py  test_spi.py
utils/: control_power_supply.py
