[tool.poetry]
name = "embci-example-repo-env"
version = "0.1.0"
description = "Environment needed for running all Python scripts in the project"
authors = ["Andrei Faur"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.2.2"
more-itertools = "^10.2.0"
pyserial = "^3.5"
pyvisa = "^1.14.1"
pyvisa-py = "^0.7.2"
logic2_automation = "^1.0.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
