[project]
name = "embci-example-repo-env"
version = "0.1.0"
description = "Environment needed for running all Python scripts in the project"
authors = ["Andrei Faur"]
readme = "README.md"
package-mode = false

dependencies = [
    "pytest==8.3.5",
    "more-itertools==10.6.0",
    "pyserial==3.5",
    "pyvisa==1.14.1",
    "pyvisa-py==0.7.2",
    "logic2_automation==1.0.7",
]

requires-python = ">=3.13"
