[package]
name = "gpio_toggle_with_hal"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m.workspace = true
cortex-m-rt.workspace = true
panic-halt.workspace = true
embedded-hal.workspace = true
rp2040-hal.workspace = true
rp2040-boot2.workspace = true

[features]
default = ["critical-section-impl"]
critical-section-impl = ["rp2040-hal/critical-section-impl"]
